test_regress/t/t_var_port_bad.out
%Error: t/t_var_port_bad.v:16:13: Input/output/inout does not appear in port list: 'b'
   input a, b;
            ^
%Error: Exiting due to
